--- a/index.html
+++ b/index.html
@@ -64,33 +64,9 @@
  
 					<img src="l.png" alt="Profile Picture">
  
-					<p class="lead">ﻻ ﺍﻟﻪ ﺍﻟﻠﻪ ﻣﺤﻤﺪ ﺍﻟﺮﺳﻮﻝ ﻟﻠﻪ
-█▒▒ নিজের কথা বলি ▒▒█   
-# আমার নাম mahmudul 
+					<p class="lead"> Hi I am mahmudul.
 
-# #কথা বলার সময় ভেবেচিন্তে বলি,তর্ক করতে ভালবাসি । 
-#যুক্তি দিয়ে বিচারকরি সব।যা বলার সামনেই বলে দেই,হয়তো এজন্য আমাকে অনেকেই ভালো পায় না।
-#চাটুকারিতারঅভ্যাস নেই।
 
-# আমি দেশকে অত্যন্ত ভালবাসি <3 
-#তারুণ্যের জাগরণ দেখে উল্লাসিত হই। 
-#দেশের জন্য জীবন দেয়ার সাহস বোধহয় আমার আছে । 
-#ন্যায়ের পথে থাকতে চেষ্টা করি।
-
-# আল্লাহ ছাড়া কাউকে ভয় পাইনা আমি। 
-
-#ব্যাক্তিগত বিষয়ে হস্তক্ষেপ আমি সহ্য করতে পারিনা। 
-#মুক্তচিন্তা করতে ভালবাসি। আমি মুসলিম এক্ষেত্রে আমি সব ধর্মকে সম্মান করি।চিন্তার ক্ষেত্রে ধর্মের সীমারেখা টানিনা।
-
-# আমি আমার জীবনকে <3 ভালবাসি। আমি জীবনের প্রতি ক্ষেত্রে :D আনন্দ খুজে বেড়াই। সেটা পেতে পারি অতি ক্ষুদ্র জিনিসের মধ্যেও।
-#জীবনে অনেক উপরে উঠার সপ্ন আমার। 
-
-#একটা বই লিখার সুপ্ত বাসনা মনে।তাই সপ্ন পুরনে ব্যাস্ত আমি। 
-#অনেক বেশি দোয়া প্রার্থী তোমাদের সবার কাছে
-কিছু মূল্যবান কথাঃ
-#প্রতিদিন এমন একটা ভালো এবং special কাজ করার ইচ্ছা আছে যেটা ডাইরীতে লিখে রাখতে পারব এবং পরবর্তীতে জীবনের শেষ দিন গুলোতে পড়ে নিজের জীবনকে সার্থক ভাবতে পারব।
-#তুমি যখন কাউকে ভালোবাসবে তখন তার প্রতি দুর্বল হয়ে যাবে। তাকে খুশি করার জন্য,নিরাপদে রাখার জন্য বোকার মতো আচরন করবে
-# তুমি সমস্যার মধ্যে আছো,তাহলে এটাই তোমার শেখার উপযুক্ত সময়
                                         </p>
 				</div>   			
  
